:sparkles: prevent queue overflow

--- a/src/components/app/Player/player.module.css
+++ b/src/components/app/Player/player.module.css
@@ -5,6 +5,11 @@
   flex-direction: column;
 }
 
+.listWrapper {
+  height: 344px;
+  overflow-y: scroll;
+}
+
 .playerWrapper {
   height: 400px;
   width: 100%;
